[package]
name = "proto_godtower"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.1"
rand = "0.8.5"
winit = "0.28"
image = "0.24"
bevy_egui = "0.24.0"
bevy_aseprite = "0.12.0"
bevy_ecs_ldtk = "0.8.0"
bevy_rapier2d = "0.23.0"
bevy-inspector-egui = "0.22.0"

[patch.crates-io]
bevy_ecs_tilemap = { git = "https://github.com/divark/bevy_ecs_tilemap", branch = "0.12-fixes" }
bevy_ecs_ldtk = { git = "https://github.com/trouv/bevy_ecs_ldtk", branch = "feat/bevy-0.12" }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies.bevy_stat_bars]
version = "0.3"
